force-app/main/default/objects/ilms__Certification__c/ilms__Certification__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>