force-app/main/default/objects/ilms__Certification__c/fields/ilms__Description__c.field-meta.xml
<CustomField>
    <fullName>ilms__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>