force-app/main/default/objects/ilms__Certification__c/fields/ilms__Icon__c.field-meta.xml
<CustomField>
    <fullName>ilms__Icon__c</fullName>
    <label>Icon</label>
    <type>Url</type>
</CustomField>