force-app/main/default/objects/ilms__Certification__c/listViews/ilms__All.listView-meta.xml
<ListView>
    <fullName>ilms__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>